Fixed cart not showing above - agileinfo - section

--- a/css/globals.css
+++ b/css/globals.css
@@ -180,6 +180,7 @@ h6 {
 
 .icon-container--cart {
   position: fixed;
+  z-index: 1;
   background-color: #ff5063;
   border-radius: 3px;
   right: 10%;
